again h2 tag add

--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
     <h1>how to work in git</h1> 
 
     <h2> File changed </h2>
+    <h2> File changed </h2>
+    <h2> File changed </h2>
+    <h2> File changed </h2>
+    <h2> File changed </h2>
+    <h2> File changed </h2>
 </body>
 </html>
